--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && npm run copy",
     "copy": "copy \"package.json\" \"dist/\"",
     "node_modules:prod": "cd dist && npm install --omit=dev",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
